# agent-hunt

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: jobs.py  platforms.py
backend/app/collectors/: manual_import.py
backend/app/models/: __init__.py  job.py  platform.py  skill.py
backend/app/schemas/: job.py  platform.py
backend/app/services/: jd_parser.py  seed.py
data/: seed_platforms.json  seed_skills.json  skill_aliases.json
docs/: domestic-scraping-strategy.md
